--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -80,6 +80,9 @@
                                     Восстановление пароля
                                 </div>
                                 <div class="tab-pane fade" id="docs-developer">
+                                    <div class="accordion accordion-secondary">
+                                        {% include 'cup/docs/dev/structures.twig' %}
+                                    </div>
                                     Разработка и подключение модулей
                                     Подключение модулей в адмипанели
                                     API для разработки модулей
