--- a/src/Template/cup/docs/main/about.twig
+++ b/src/Template/cup/docs/main/about.twig
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
+    <div class="card-header" id="aboutCollapseHeading" data-toggle="collapse" data-target="#aboutCollapse">
         <div class="span-icon">
             <div class="flaticon-box-1"></div>
         </div>
@@ -9,7 +9,7 @@
         <div class="span-mode"></div>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+    <div id="aboutCollapse" class="collapse show" data-parent="#accordion">
         <div class="card-body">
             <p>
                 Перед вами многопользовательский новостной движок, обладающий большими функциональными возможностями предназначенный, в первую очередь, для создания новостных блогов, продающих (посадочных страниц), интернет магазинов и сайтов с большим информационным контекстом.
