--- a/src/Template/cup/docs/main/features.twig
+++ b/src/Template/cup/docs/main/features.twig
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header collapsed" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" role="button">
+    <div class="card-header collapsed" id="featuresCollapseHeading" data-toggle="collapse" data-target="#featuresCollapse">
         <div class="span-icon">
             <div class="flaticon-box-1"></div>
         </div>
@@ -8,7 +8,8 @@
         </div>
         <div class="span-mode"></div>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+
+    <div id="featuresCollapse" class="collapse" data-parent="#accordion">
         <div class="card-body">
             <b>Общие возможности:</b>
             <ul>
