--- a/theme/products/last-list.twig
+++ b/theme/products/last-list.twig
@@ -5,8 +5,27 @@
             <h2>Новые товары</h2>
         </div>
         <div class="product-slider owl-carousel">
-            {% for i in 0..11 %}
-                {% include 'products/last-list-item.twig' %}
+            {% set categories = catalog_category() %}
+            {% set products = catalog_product({}, {'date': 'desc'}, 10) %}
+            {% set files = files({'item': 'catalog_product', 'item_uuid': products.pluck('uuid')}) %}
+
+            {% for product in products %}
+                <div class="product-item">
+                    <div class="pi-pic">
+                        <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+                            <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath() }}" alt="">
+                        </a>
+                        <div class="pi-links">
+                            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>В корзину</span></a>
+                        </div>
+                    </div>
+                    <div class="pi-text">
+                        <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+                            <h6>{{ product.price }}</h6>
+                            <p>{{ product.title }}</p>
+                        </a>
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
