--- a/theme/common/banner.twig
+++ b/theme/common/banner.twig
@@ -5,7 +5,7 @@
             <div class="tag-new">NEW</div>
             <span>Новое поступление</span>
             <h2>ТОВАР</h2>
-            <a href="#" class="site-btn">К покупкам</a>
+            <a href="/catalog" class="site-btn">К покупкам</a>
         </div>
     </div>
 </section>
