--- a/theme/catalog.category.twig
+++ b/theme/catalog.category.twig
@@ -13,8 +13,11 @@
         <div class="container">
             <h4>{{ category.meta.title ? category.meta.title : (category.title ?? 'Каталог') }}</h4>
             <div class="site-pagination">
-                <a href="">Home</a> /
-                <a href="">Shop</a> /
+                <a href="/">Главная</a> /
+                <a href="/catalog">Каталог</a>
+                {% for breadcrumb in catalog_breadcrumb(category) %}
+                    / <a href="/catalog/{{ breadcrumb.address }}">{{ breadcrumb.meta.title ? breadcrumb.meta.title : breadcrumb.title }}</a>
+                {% endfor %}
             </div>
         </div>
     </div>
