--- a/src/Template/cup/docs/dev/structures/guestbook.twig
+++ b/src/Template/cup/docs/dev/structures/guestbook.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h4 class="text-center">Модель записи в Гостевой Книге</h4>
+    <h4>Модель записи в Гостевой Книге</h4>
 
     <h5>Поля</h5>
     <table class="table">
