--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -83,6 +83,9 @@
                                     <div class="accordion accordion-secondary">
                                         {% include 'cup/docs/dev/structures.twig' %}
                                     </div>
+                                    <div class="accordion accordion-secondary">
+                                        {% include 'cup/docs/dev/api.twig' %}
+                                    </div>
                                     Разработка и подключение модулей
                                     Подключение модулей в адмипанели
                                     API для разработки модулей
