--- a/src/Template/cup/docs/dev/structures/user.twig
+++ b/src/Template/cup/docs/dev/structures/user.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h4 class="text-center">Модель пользователя</h4>
+    <h4>Модель пользователя</h4>
 
     <h5>Поля</h5>
     <table class="table">
