--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -291,7 +291,7 @@
                                     'name': 'template[product]',
                                     'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="Укажите название шаблона, который хотите использовать для товаров в данной категории или оставьте <b>catalog.product.twig</b>"></i>',
                                     'args': {
-                                        'value': item.template.product is not empty ? item.template.product : 'catalog.product.twig',
+                                        'value': item.template.product is not empty ? item.template.product : (params.catalog_product_template ?? 'catalog.product.twig'),
                                         'required': true,
                                     }
                                 } %}
