--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -363,7 +363,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="card card-primary bg-primary-gradient">
+                                    {#<div class="card card-primary bg-primary-gradient">
                                         <div class="card-body">
                                             <h4 class="mt-3 b-b1 pb-2 mb-4 fw-bold">Сейчас на сайте</h4>
                                             <h1 class="mb-4 fw-bold">17</h1>
@@ -377,7 +377,7 @@
                                                 <li class="d-flex justify-content-between pb-1 pt-1"><small>/product/atlantis/demo.html</small> <span>10</span></li>
                                             </ul>
                                         </div>
-                                    </div>
+                                    </div>#}
                                 </div>
                             </div>
                         {% endblock %}
