--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -25,11 +25,11 @@
                                         Публикация
                                     </a>
                                 </li>
-                                <li class="nav-item">
+                                {#<li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#poll" role="tab">
                                         Опрос
                                     </a>
-                                </li>
+                                </li>#}
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
                                         Дополнительно
