--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -56,6 +56,8 @@
                 <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
                     <div class="container-fluid">
                         <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                            {% include 'cup/trademaster.twig' %}
+
                             <li class="nav-item">
                                 <a class="nav-link" href="/" target="_blank">
                                     <i class="fas fa-globe-europe"></i>
@@ -118,60 +120,6 @@
                                         <a class="see-all" href="javascript:void(0);">See all notifications<i class="fa fa-angle-right"></i> </a>
                                     </li>
                                 </ul>
-                            </li>#}
-
-                            {#<li class="nav-item dropdown hidden-caret">
-                                <a class="nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
-                                    <i class="fas fa-layer-group"></i>
-                                </a>
-                                <div class="dropdown-menu quick-actions quick-actions-info animated fadeIn">
-                                    <div class="quick-actions-header">
-                                        <span class="title mb-1">Quick Actions</span>
-                                        <span class="subtitle op-8">Shortcuts</span>
-                                    </div>
-                                    <div class="quick-actions-scroll scrollbar-outer">
-                                        <div class="quick-actions-items">
-                                            <div class="row m-0">
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-file-1"></i>
-                                                        <span class="text">Generated Report</span>
-                                                    </div>
-                                                </a>
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-database"></i>
-                                                        <span class="text">Create New Database</span>
-                                                    </div>
-                                                </a>
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-pen"></i>
-                                                        <span class="text">Create New Post</span>
-                                                    </div>
-                                                </a>
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-interface-1"></i>
-                                                        <span class="text">Create New Task</span>
-                                                    </div>
-                                                </a>
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-list"></i>
-                                                        <span class="text">Completed Tasks</span>
-                                                    </div>
-                                                </a>
-                                                <a class="col-6 col-md-4 p-0" href="#">
-                                                    <div class="quick-actions-item">
-                                                        <i class="flaticon-file"></i>
-                                                        <span class="text">Create New Invoice</span>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </li>#}
 
                             <li class="nav-item dropdown hidden-caret">
