--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -18,6 +18,8 @@
     {{ scripts.append('/assets/js/core/popper.min.js') }}
     {{ scripts.append('/assets/js/core/tooltip.min.js') }}
     {{ scripts.append('/assets/js/core/bootstrap.min.js') }}
+    {{ scripts.append('/assets/js/core/moment.min.js') }}
+    {{ scripts.append('/assets/js/core/moment-with-locales.min.js') }}
 
     {{ scripts.append('/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js') }}
     {{ scripts.append('/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js') }}
@@ -57,70 +59,13 @@
                     <div class="container-fluid">
                         <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                             {% include 'cup/trademaster.twig' %}
+                            {% include 'cup/task.twig' %}
 
                             <li class="nav-item">
                                 <a class="nav-link" href="/" target="_blank">
                                     <i class="fas fa-globe-europe"></i>
                                 </a>
                             </li>
-                            {#<li class="nav-item dropdown hidden-caret">
-                                <a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fa fa-bell"></i>
-                                    <span class="notification">8</span>
-                                </a>
-                                <ul class="dropdown-menu notif-box animated fadeIn" aria-labelledby="notifDropdown">
-                                    <li>
-                                        <div class="dropdown-title">You have 4 new notification</div>
-                                    </li>
-                                    <li>
-                                        <div class="notif-scroll scrollbar-outer">
-                                            <div class="notif-center">
-                                                <a href="#">
-                                                    <div class="notif-icon notif-primary"> <i class="fa fa-user-plus"></i> </div>
-                                                    <div class="notif-content">
-                                                        <span class="block">
-                                                            New user registered
-                                                        </span>
-                                                        <span class="time">5 minutes ago</span>
-                                                    </div>
-                                                </a>
-                                                <a href="#">
-                                                    <div class="notif-icon notif-success"> <i class="fa fa-comment"></i> </div>
-                                                    <div class="notif-content">
-                                                        <span class="block">
-                                                            Rahmad commented on Admin
-                                                        </span>
-                                                        <span class="time">12 minutes ago</span>
-                                                    </div>
-                                                </a>
-                                                <a href="#">
-                                                    <div class="notif-img">
-                                                        <img src="/assets/img/profile2.jpg" alt="Img Profile">
-                                                    </div>
-                                                    <div class="notif-content">
-                                                        <span class="block">
-                                                            Reza send messages to you
-                                                        </span>
-                                                        <span class="time">12 minutes ago</span>
-                                                    </div>
-                                                </a>
-                                                <a href="#">
-                                                    <div class="notif-icon notif-danger"> <i class="fa fa-heart"></i> </div>
-                                                    <div class="notif-content">
-                                                        <span class="block">
-                                                            Farrah liked Admin
-                                                        </span>
-                                                        <span class="time">17 minutes ago</span>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <a class="see-all" href="javascript:void(0);">See all notifications<i class="fa fa-angle-right"></i> </a>
-                                    </li>
-                                </ul>
-                            </li>#}
 
                             <li class="nav-item dropdown hidden-caret">
                                 <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
